# fpga_soc_pong

./: .gitignore  README.md  demo.fbi  requirements.txt  run_dashboard.py  usb_parser.py
demo/: crt0.d  demo.elf  donut.d  helloc.d  main.c  main.d
hardware/: contador.py  contador.v  distance_sensor.py  hcsr04.vhd  interface_hcsr04.py  pong_drawer.py  pong_drawer.v  servo_control.py  soc.py  status.py  vivado.jou
hardware/custom/: controle_servo.vhd  hcsr04.vhd  pong_drawer.v  vga_driver.v
peripheral_acess/: Cargo.toml  README.md  memory.x
peripheral_acess/src/: identifier_mem.rs  lib.rs
peripheral_acess/src/identifier_mem/: identifier_mem.rs
peripheral_acess/src/leds/: out.rs
soc/: soc.py
software/: Cargo.toml  demo.py  main.c  memory.x
software/.cargo/: config.toml
software/app/: Makefile  ball.c  ball.h  main.c  paddle.c  paddle.h  pong.c  pong.h  table.c  table.h
software/libc/: .ninja_deps  .ninja_log  build.ninja  compile_commands.json  cross.txt  picolibc.h
software/libc/meson-info/: intro-buildoptions.json  intro-buildsystem_files.json  intro-install_plan.json  intro-installed.json  intro-targets.json  meson-info.json
software/libc/meson-logs/: meson-log.txt
software/libc/meson-private/: cmd_line.txt  coredata.dat.prev
software/src/: main.rs
