[package]
name = "pac"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bare-metal = "0.2.0"
riscv = "0.5.5"
vcell = "0.1.0"
riscv-rt = { optional = true, version = "0.7.0" }

[features]
rt = ["riscv-rt"]

[build-dependencies]
svd2rust = "0.17.0"
