[package]
name = "basys3-pac"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bare-metal = "1.0.0"
vcell = "0.1.3"
riscv = "0.9.0"
riscv-rt = { optional = true, version = "0.9.0" }
critical-section = { version = "1.1.1", optional = true }

[features]
rt = ["riscv-rt"]

[build-dependencies]
svd2rust = "0.17.0"
