[package]
name = "software"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
basys3-pac = { path = "../peripheral_acess" }
riscv-rt  = "0.9.0"
panic-halt = "0.2"

[profile.release]
# Keep debug information for release builds, for easier debugging.
# It will be removed during the conversion to the .dfu file.
# debug = true

# Improve code generation
# lto = true
# codegen-units = 1
